# itotori

./: .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GAME_NAME_BASELINE.md  QD-WISHLIST.md  README.md  REAL-BYTES-PLAN.md  clippy.toml  deny.toml  docker-compose.yml  flake.nix  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  vite.config.ts
crates/kaifuu-cli/: Cargo.toml
crates/kaifuu-cli/src/: bgi_commands.rs  binary_patch_smoke.rs  evidence_commands.rs  golden_profile_commands.rs  helper_commands.rs  key_commands.rs  main.rs  offset_map_commands.rs  partial_adapter.rs  readiness_commands.rs  rpgmaker_commands.rs  siglus_commands.rs  softpal_commands.rs  tests.rs  vault.rs  wolf_commands.rs  xp3_commands.rs  xp3_real_bytes_smoke.rs
crates/kaifuu-cli/tests/: alpha_encrypted_readiness.rs  alpha_readiness_profile.rs  bgi_bytecode_adapter.rs  binary_patch_smoke.rs  extract_real_sweetie_hd.rs  mvmz_readiness_redaction.rs  packed_engine_readiness.rs  partial_apply_refuses.rs  partial_extract.rs  patch_real_sweetie_hd.rs  profile_legacy_compat.rs  reallive_project_metadata.rs  rpgmaker_key_import_e2e.rs  siglus_static_key.rs  softpal_cli_test.rs  vault_cli_test.rs  xp3_capability_profile.rs  xp3_contract_scaffold.rs  xp3_crypt_chain_smoke.rs
crates/kaifuu-core/: Cargo.toml
crates/kaifuu-core/src/: alpha_encrypted_readiness.rs  alpha_encrypted_readiness_tests.rs  alpha_readiness_profile.rs  asset_ocr.rs  asset_ocr_tests.rs  bgi_bytecode_fixture.rs  bgi_detector_fixture.rs  bgi_detector_fixture_transform_names.rs  bgi_readiness.rs  bgi_readiness_model.rs  bgi_readiness_resolver.rs  bgi_readiness_tests.rs  compat_evidence.rs  compat_evidence_tests.rs  compat_profile.rs  compat_regression.rs  compat_regression_runner.rs  compat_regression_tests.rs  contracts.rs  contracts_revision_validation.rs  dynamic_key_discovery_helper.rs  hashing.rs  lib.rs  mv_mz_asset_xor.rs  mv_mz_encrypted_asset_replacement.rs  mv_mz_encrypted_asset_replacement_tests.rs  mv_mz_encrypted_audio.rs  mv_mz_encrypted_image.rs  mv_mz_readiness.rs  mv_mz_readiness_report.rs  native_windows_helper.rs  offset_map.rs  packed_engine_readiness.rs  partial_adapter_report.rs  patch_transaction.rs  plain_xp3_smoke.rs  repro_bundle.rs  repro_bundle_tests.rs  rgss3_profile.rs  rgss3_smoke.rs  (+29 more)
crates/kaifuu-core/tests/: compat_profile_fixtures.rs  compat_regression_fixtures.rs  helper_diagnostic_docs_guard.rs  kag_corpus_manifest.rs  mvmz_encrypted_roundtrip.rs  property.rs  repro_bundle_fixtures.rs  rpgmaker_profile_a.rs  synthetic_xp3_capability_coverage.rs  xp3_profile_a.rs  xp3_real_bytes_roundtrip.rs
crates/kaifuu-delta/: Cargo.toml
crates/kaifuu-delta/src/: content_codec.rs  contract_scaffold.rs  lib.rs  snapshot.rs
crates/kaifuu-engine-fixture/: Cargo.toml
crates/kaifuu-engine-fixture/src/: bgi.rs  fixture_adapter.rs  fixture_markup.rs  fixture_slots.rs  fixture_source.rs  lib.rs  lib_tests.rs  lib_tests_asset_inventory.rs  lib_tests_fixture_contracts.rs  lib_tests_fixture_golden.rs  lib_tests_fixture_markup.rs  lib_tests_fixture_protected_spans.rs  lib_tests_fixture_round_trip.rs  lib_tests_reallive_contracts.rs  lib_tests_reallive_detection.rs  lib_tests_reallive_extract.rs  lib_tests_reallive_patch.rs  lib_tests_reallive_support.rs  lib_tests_siglus.rs  lib_tests_softpal.rs  lib_tests_support.rs  lib_tests_xp3.rs  nexas.rs  profile_detection_helpers.rs  reallive_adapter.rs  reallive_bridge.rs  reallive_capabilities.rs  reallive_detector_fsm.rs  reallive_inventory.rs  reallive_patch.rs  reallive_profile.rs  reallive_support.rs  siglus_adapter.rs  siglus_inventory.rs  siglus_profile.rs  softpal.rs  xp3_adapter.rs  xp3_inventory.rs  xp3_profile.rs
crates/kaifuu-engine-fixture/tests/: live_softpal_detector_test.rs  nexas_detector_test.rs  reallive_adapter_length_changing_real_bytes.rs  reallive_detector_live_corpus.rs  reallive_nested.rs  softpal_layered_pac_contract.rs
crates/kaifuu-kirikiri/: Cargo.toml
crates/kaifuu-kirikiri/fixtures/: dialogue_basic.ks  iscript_block.ks
crates/kaifuu-kirikiri/src/: ids.rs  lib.rs  parse.rs  parse_parser.rs  patch.rs  xp3_crypt.rs  xp3_crypt_chain.rs  xp3_crypt_chain_tests.rs  xp3_crypt_tests.rs  xp3_patch.rs  xp3_private_local_summary.rs  xp3_private_local_summary_tests.rs  xp3_private_local_validation.rs  xp3_production.rs  xp3_readiness_report.rs
crates/kaifuu-kirikiri/tests/: iscript_blocks.rs  kag_roundtrip.rs  xp3_crypt_smoke.rs  xp3_patch_smoke.rs  xp3_private_local_summary_smoke.rs
crates/kaifuu-nexas/: Cargo.toml
crates/kaifuu-nexas/src/: archive.rs  archive_tests.rs  huffman.rs  inflate.rs  lib.rs  lzss.rs
crates/kaifuu-nexas/tests/: pac_real_corpus.rs
crates/kaifuu-reallive/: Cargo.toml
crates/kaifuu-reallive/examples/: probe_real_bytes.rs  probe_scene_1_encryption.rs  regenerate_fixtures.rs  sjis_encodable_codepoints.rs
crates/kaifuu-reallive/src/: archive.rs  ast.rs  bridge.rs  bridge_ids.rs  command_catalog.rs  compressor.rs  decompressor.rs  detector.rs  diagnostics.rs  encoding.rs  framing.rs  gameexe.rs  gameexe_tests.rs  inventory.rs  lib.rs  opcode.rs  opcode_expression.rs  opcode_tests.rs  opcodes.rs  parser.rs  patchback.rs  protected_spans.rs  protected_spans_tests.rs  scene_header.rs  scope.rs  strings.rs  test_fixtures.rs  xor2.rs  xor2_tests.rs
crates/kaifuu-reallive/tests/: bridge_purity_real_bytes.rs  bridge_real_bytes.rs  detect_real_bytes.rs  framing_pins_real_bytes.rs  (+11 more)
crates/kaifuu-rpgmaker/: Cargo.toml
crates/kaifuu-siglus/: Cargo.toml
crates/kaifuu-softpal/: Cargo.toml
crates/kaifuu-tyrano/: Cargo.toml
crates/kaifuu-vault-source/: .gitignore  Cargo.toml  README.md  build.rs
crates/utsushi-cli/: Cargo.toml  build.rs
crates/utsushi-core/: Cargo.toml
crates/utsushi-fixture/: Cargo.toml
crates/utsushi-kirikiri/: Cargo.toml
crates/utsushi-kirikiri-xp3/: Cargo.toml
crates/utsushi-reallive/: Cargo.toml
crates/utsushi-rpgmaker-mv/: Cargo.toml
crates/utsushi-rpgmaker-mv-mz/: Cargo.toml
crates/utsushi-siglus/: Cargo.toml
crates/utsushi-softpal/: Cargo.toml
(+3236 files in other folders)
