[workspace]
resolver = "3"
members = [
  "crates/kaifuu-core",
  "crates/kaifuu-delta",
  "crates/kaifuu-engine-fixture",
  "crates/kaifuu-reallive",
  "crates/kaifuu-siglus",
  "crates/kaifuu-rpgmaker",
  "crates/kaifuu-cli",
  "crates/kaifuu-vault-source",
  "crates/utsushi-core",
  "crates/utsushi-fixture",
  "crates/utsushi-reallive",
  "crates/utsushi-rpgmaker-mv",
  "crates/utsushi-siglus",
  "crates/utsushi-cli",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cat-cave/itotori"

[workspace.dependencies]
bytes = "1"
dirs = "6"
encoding_rs = "0.8"
jsonschema = { version = "0.46", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust2 = { version = "0.21", default-features = false, features = ["util", "compress"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v7"] }
