[package]
name = "kaifuu-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaifuu-core = { path = "../kaifuu-core" }
kaifuu-delta = { path = "../kaifuu-delta" }
kaifuu-engine-fixture = { path = "../kaifuu-engine-fixture" }
kaifuu-reallive = { path = "../kaifuu-reallive" }
kaifuu-rpgmaker = { path = "../kaifuu-rpgmaker" }
serde_json.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile = { workspace = true }
