[package]
name = "kaifuu-cli"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaifuu-core = { path = "../kaifuu-core" }
kaifuu-delta = { path = "../kaifuu-delta" }
kaifuu-engine-fixture = { path = "../kaifuu-engine-fixture" }
kaifuu-reallive = { path = "../kaifuu-reallive" }
kaifuu-rpgmaker = { path = "../kaifuu-rpgmaker" }
kaifuu-vault-source = { path = "../kaifuu-vault-source" }
serde_json.workspace = true

[dev-dependencies]
rusqlite = { workspace = true }
sevenz-rust2 = { workspace = true }
sha2.workspace = true
tempfile = { workspace = true }

[lints]
workspace = true
