[package]
name = "kaifuu-core"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
kaifuu-kirikiri = { path = "../kaifuu-kirikiri" }
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
