[package]
name = "kaifuu-delta"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaifuu-core = { path = "../kaifuu-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
