[package]
name = "kaifuu-engine-fixture"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaifuu-core = { path = "../kaifuu-core" }
kaifuu-reallive = { path = "../kaifuu-reallive" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
