[package]
name = "kaifuu-kirikiri"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust KiriKiri KAG `.ks` plaintext scenario-script text-extraction + byte-preserving patch adapter (the null-container special case; NOT commercial encrypted-XP3 coverage). Deterministic, encoding-aware, no shell-outs."

[dependencies]
encoding_rs.workspace = true
flate2.workspace = true
kaifuu-core = { path = "../kaifuu-core" }
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
encoding_rs.workspace = true

[lints]
workspace = true
