[package]
name = "kaifuu-reallive"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust RealLive Scene/SEEN parser-boundary smoke (KAIFUU-173). Clean-room, behavior-only; rlvm not linked, not derived."

[dependencies]
kaifuu-core = { path = "../kaifuu-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
