[package]
name = "kaifuu-reallive"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust RealLive Scene/SEEN parser-boundary smoke (KAIFUU-173). Clean-room, behavior-only; rlvm not linked, not derived."

[dependencies]
encoding_rs.workspace = true
kaifuu-core = { path = "../kaifuu-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
