[package]
name = "kaifuu-vault-source"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only itotori vault-source localCorpus adapter. Implements docs/itotori-vault-source-adapter.md."

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
sevenz-rust2.workspace = true
thiserror.workspace = true
uuid.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
rusqlite = { workspace = true }
