[package]
name = "utsushi-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
utsushi-core = { path = "../utsushi-core" }
utsushi-fixture = { path = "../utsushi-fixture" }
utsushi-reallive = { path = "../utsushi-reallive" }
utsushi-rpgmaker-mv = { path = "../utsushi-rpgmaker-mv" }

[dev-dependencies]
# ALPHA-006b real-bytes test: synthesises a localized (English) patched
# Seen.txt from real Sweetie HD scene 1 via the kaifuu patchback, then
# drives the render-validate screenshot surface against it.
encoding_rs.workspace = true
kaifuu-reallive = { path = "../kaifuu-reallive" }
