[package]
name = "utsushi-cli"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
# utsushi-cli-single-scene-xor2-staging: the top-level binary owns the
# dev-only `use_xor_2` segment-cipher recovery so the single-scene
# replay-validate / render-validate surfaces decode REAL text on xor2
# titles (Sweetie HD, compiler 110002). The architectural boundary keeps
# `utsushi-reallive` itself free of any `kaifuu-reallive` dependency (see
# utsushi-reallive/Cargo.toml); the recovery is staged here in the
# orchestration layer instead, reusing the proven `recover_and_decrypt_archive`.
kaifuu-reallive = { path = "../kaifuu-reallive" }
utsushi-core = { path = "../utsushi-core" }
utsushi-fixture = { path = "../utsushi-fixture" }
# the `trace-kag` subcommand drives the KAG command-trace probe
# for plaintext / already-extracted KiriKiri/KAG `.ks` scripts.
utsushi-kirikiri = { path = "../utsushi-kirikiri" }
utsushi-reallive = { path = "../utsushi-reallive" }
utsushi-rpgmaker-mv = { path = "../utsushi-rpgmaker-mv" }

[dev-dependencies]
# Real-bytes single-scene xor2 replay test: synthesises a localized
# (English) patched Seen.txt from a real Sweetie HD dialogue scene via the
# kaifuu patchback, then drives the replay-validate binary against it and
# asserts the engine's OBSERVED TextLine bodies decode the real translated
# text (not mojibake).
encoding_rs.workspace = true
# `structure_real_sweetie_hd.rs` drives the `utsushi structure` binary over the
# real Sweetie HD archive into a temp output path.
tempfile = { workspace = true }
# Engine-port capability parity gate (tests/engine_parity_gate.rs): the CLI
# is the crate that can see EVERY registered engine port, so the cross-engine
# parity conformance gate lives here as an integration test. These three ports
# are not production CLI dependencies; they are pulled in dev-only so the gate
# can collect all six `PARITY_PROFILE`s and assert feature-parity across them.
utsushi-siglus = { path = "../utsushi-siglus" }
utsushi-kirikiri-xp3 = { path = "../utsushi-kirikiri-xp3" }
utsushi-rpgmaker-mv-mz = { path = "../utsushi-rpgmaker-mv-mz" }

[build-dependencies]
serde_json.workspace = true

[lints]
workspace = true
