[package]
name = "utsushi-fixture"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
utsushi-core = { path = "../utsushi-core" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
