[package]
name = "utsushi-kirikiri-xp3"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UTSUSHI-181 — pure-Rust KiriKiri XP3/KAG engine-port scaffold for the utsushi-core substrate facade. The native KiriKiri2/KirikiriZ (or a browser reimplementation) TJS engine IS the KAG runtime, so this port carries ZERO opcode handlers: it declares the KiriKiri/KAG family through the substrate facade conformance manifest and emits a from-scratch clean-room attestation for the KAG plaintext (.ks) path. Clean-room; no decompiled/copyrighted KiriKiri/TJS engine code, no vendored engine source, no game bytes."

[dependencies]
# ONLY utsushi-core. This crate consumes the substrate facade
# (`utsushi_core::substrate::*`) plus the engine-neutral implementation-map
# schema (`utsushi_core::port::impl_map`). It depends on NO other engine
# crate (not `utsushi-kirikiri`, not `kaifuu-kirikiri`) and vendors NO engine
# source: KAG/TJS command dispatch happens in the native KiriKiri (or a
# browser reimplementation) TJS runtime, so there is nothing here to share
# with a Rust interpreter.
utsushi-core = { path = "../utsushi-core" }

[lints]
workspace = true
