[package]
name = "utsushi-reallive"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UTSUSHI-200 alpha-gate scaffold: pure-Rust RealLive engine port that registers conformance against the utsushi-core substrate facade. Clean-room; rlvm is a research anchor only and is not linked, vendored, or mechanically translated."

[dependencies]
encoding_rs.workspace = true
kaifuu-reallive = { path = "../kaifuu-reallive" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utsushi-core = { path = "../utsushi-core" }

[package.metadata.research-anchor]
# Research anchor metadata for UTSUSHI-200. The crate intentionally does
# NOT depend on rlvm — neither as a source dep nor a build artifact. This
# block exists so audit tooling can detect the boundary statement without
# parsing crate-level docs.
project = "rlvm"
url = "https://github.com/eglaysher/rlvm"
# rlvm's published license is GPL-3. The whole point of this scaffold (and
# of the clean-room boundary statement carried in `src/lib.rs`) is that
# itotori does NOT take a derived-work posture toward rlvm: no headers
# included, no source files vendored, no mechanical translation. The
# license string is recorded here as observed, not as imposed on itotori.
license = "GPL-3.0-only"
# Linkage posture: rlvm is NOT linked at any tier (source, object, or
# distribution). itotori's distribution posture for this crate is the
# workspace-default `MIT OR Apache-2.0`.
linkage = "none"
# Files read (read-only) when re-deriving the format hypotheses. The
# hypotheses are re-tested against bytes (Sweetie HD evidence) before
# being encoded; see docs/research/reallive-engine.md § "Public sources".
files-referenced = [
  "src/libreallive/archive.cc",
  "src/libreallive/scenario.cc",
  "src/libreallive/bytecode.cc",
  "src/libreallive/expression.cc",
  "src/libreallive/compression.cc",
]

[dev-dependencies]
serde_json.workspace = true
